feat: creating base for main customer screen
f

--- a/Front-end/test-rhitmo/src/styles.scss
+++ b/Front-end/test-rhitmo/src/styles.scss
@@ -34,30 +34,11 @@ $EstacionaFacil-theme: mat.define-light-theme((
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Oswald:wght@400;700&family=Ruda:wght@900&family=Work+Sans:ital,wght@1,100;1,400&display=swap');
-.mensagem-erro-formulario {
-    color: red;
-    font-size: small;
+
+*::after,
+*::before,
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
 }
-
-.text-primary {
-    color: #ec8526 !important;
-}
-
-.btn-primary {
-    background-color:#ec8526 !important;
-    border: 2px solid #ec8526 !important;
-    font-size: larger;
-}
-
-.btn-primary:hover {
-    background-color:#cf6400 !important;
-    border: 2px solid #cf6400 !important;
-    font-size: larger;
-}
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
