--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
@@ -3,12 +3,14 @@ $header-title-color: #FFFFFF;
 $title-page-background-color: #D9D9D9;
 $main-text-color: #000000;
 $submit-button-color: #377DC0;
+$error-message-color: #ff0000;
 
 $main-font: 'Koh Santepheap', serif;
 $header-title-font: 'Inter', sans-serif;
 
 $main-font-size: 24px;
 $title-page-font-size: 64px;
+$error-message-font-size: 20px;
 
 $main-font-weight: 400;
 
@@ -77,13 +79,13 @@ main {
 
 .form-body {
     width: 70vw;
-    margin-top: 62px;
+    margin-top: 66px;
 
     &__field {
         display: flex;
         flex-direction: column;
-        margin-bottom: 53px;
-    
+        margin-bottom: 19px;
+
         &--input {
             height: 63px;
             border-radius: 6px;
@@ -91,6 +93,15 @@ main {
             margin-top: 3px;
             padding-left: 12px;
         }
+
+        &--error-message {
+            color: $error-message-color;
+            font-size: $error-message-font-size;
+        }
+    }
+
+    &__location {
+        background-color: red;
     }
 }
 
