--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
@@ -19,9 +19,13 @@ $main-font-weight: 400;
     font-family: $main-font;
     font-size: $main-font-size;
     font-weight: $main-font-weight;
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+     box-sizing: border-box; 
 }
 
-input {
+input,
+select {
     border: none;
 
     textarea:focus,
@@ -98,6 +102,22 @@ main {
             color: $error-message-color;
             font-size: $error-message-font-size;
         }
+
+        &--select {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            height: 63px;
+            background: rgba($title-page-background-color, 0.5);
+            background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='100' viewBox='0 0 24 24' width='67' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+            background-repeat: no-repeat;
+            background-position-x: 97.5%;
+            background-position-y: -17px;
+            border-radius: 6px;
+            margin-right: 2rem;
+            padding-left: 12px;
+            width: 100%;
+        }
     }
 
     &__location {
@@ -109,7 +129,7 @@ main {
             &:nth-child(odd) {
                 padding-right: 12px;
             }
-            
+
             &:nth-child(even) {
                 padding-left: 12px;
             }
