--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.html
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.html
@@ -46,12 +46,14 @@
 
                 <div class="form-body__location--container">
                     <div class="form-body__field">
-                        <label for="customerCpf">Cpf</label>
+                        <label for="customerState">Estado</label>
                         <select (change)="setState($event)" class="form-body__field--select"
-                            [ngStyle]="{color: state ? '#000000' : '#A9A9A9'}">
+                            [ngStyle]="{color: state ? '#000000' : '#A9A9A9'}" formControlName="state" required>
                             <option [value]="0">Selecione o Estado</option>
                             <option *ngFor="let state of stateDictionary | keyvalue" [value]="state.key">{{ state.value }}</option>
                         </select>
+                        <p *ngIf="validateState()" class="form-body__field--error-message">O estado é
+                            obrigatório</p>
                     </div>
                 </div>
 
