--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
@@ -122,6 +122,7 @@ main {
 
     &__location {
         display: flex;
+        flex-wrap: wrap;
 
         &--container {
             flex: 0 0 50%;
@@ -136,6 +137,7 @@ main {
         }
     }
 }
+
 
 .footer {
     min-height: 137px;
