--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
@@ -2,7 +2,7 @@ $header-footer-color: #0A0A3C;
 $header-title-color: #FFFFFF;
 $title-page-background-color: #D9D9D9;
 $main-text-color: #000000;
-$submit-button-color: #377DC0;
+$main-form-color: #377DC0;
 $error-message-color: #ff0000;
 
 $main-font: 'Koh Santepheap', serif;
@@ -19,9 +19,9 @@ $main-font-weight: 400;
     font-family: $main-font;
     font-size: $main-font-size;
     font-weight: $main-font-weight;
-    -moz-box-sizing: border-box; 
-    -webkit-box-sizing: border-box; 
-     box-sizing: border-box; 
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 input,
@@ -136,8 +136,19 @@ main {
             }
         }
     }
-}
 
+    &__payment-container {
+        margin-top: 14px;
+        border-bottom: 3px solid #EEF3F7;
+        margin-bottom: 26px;
+
+        &--text {
+            padding-bottom: 23px;
+            color: $main-form-color;
+            font-weight: 1000;
+        }
+    }
+}
 
 .footer {
     min-height: 137px;
