--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
@@ -117,6 +117,7 @@ main {
             margin-right: 2rem;
             padding-left: 12px;
             width: 100%;
+            margin-top: 3px;
         }
     }
 
@@ -137,15 +138,68 @@ main {
         }
     }
 
-    &__payment-container {
-        margin-top: 14px;
-        border-bottom: 3px solid #EEF3F7;
-        margin-bottom: 26px;
+    &__name-date {
+        display: flex;
 
-        &--text {
-            padding-bottom: 23px;
-            color: $main-form-color;
-            font-weight: 1000;
+        &__name {
+            flex: 0 0 50%;
+            padding-right: 12px;
+        }
+
+        &__date {
+            padding-left: 12px;
+            display: flex;
+            flex: 0 0 50%;
+
+            &__field {
+                flex: 0 0 50%;
+
+                &:nth-child(odd) {
+                    padding-right: 12px;
+                }
+    
+                &:nth-child(even) {
+                    padding-left: 12px;
+                }
+            }
+        }
+    }
+
+    &__payment-container {
+
+        &__title {
+            margin-top: 14px;
+            border-bottom: 3px solid #EEF3F7;
+            margin-bottom: 30px;
+
+            &--text {
+                padding-bottom: 10px;
+                color: $main-form-color;
+                font-weight: 1000;
+            }
+        }
+
+        &__radios {
+            display: flex;
+            position: relative;
+            margin-bottom: 42px;
+
+            &__option {
+                &--icon {
+                    cursor: pointer;
+                    position: absolute;
+                    top: 5px;
+                }
+
+                &--text {
+                    margin-left: 35px;
+                }
+
+
+                &:nth-child(even) {
+                    margin-left: 116px;
+                }
+            }
         }
     }
 }
