--- a/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.scss
@@ -4,6 +4,7 @@ $title-page-background-color: #D9D9D9;
 $main-text-color: #000000;
 $main-title-color: #377DC0;
 $table-border-color: #77A7D4;
+$border-color: #EEF3F7;
 
 $main-font: 'Koh Santepheap', serif;
 $header-title-font: 'Inter', sans-serif;
@@ -82,7 +83,7 @@ main {
 }
 
 .grid-title-container {
-    border-bottom: 3px solid #EEF3F7;
+    border-bottom: 3px solid $border-color;
     margin-bottom: 26px;
 
     &--text {
