--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
@@ -36,6 +36,7 @@ select {
 }
 
 body {
+    background-color: rgb(48, 46, 46);
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -248,5 +249,22 @@ main {
         margin-left: 32px;
         margin-top: 10px;
     }
+}
 
+@media only screen and (max-width: 1300px) {
+    .form-body {
+        &__location {
+            &--container {
+                flex: 0 0 100%;
+    
+                &:nth-child(odd) {
+                    padding-right: 0;
+                }
+    
+                &:nth-child(even) {
+                    padding-left: 0;
+                }
+            }
+        }
+    }
 }
