--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
@@ -210,7 +210,7 @@ main {
 
     &__card-info {
         display: flex;
-        flex: 1;
+        flex: 0 0 100%;
     }
 
     &__submit {
@@ -253,6 +253,8 @@ main {
 
 @media only screen and (max-width: 1300px) {
     .form-body {
+        width: 90vw;
+
         &__location {
             &--container {
                 flex: 0 0 100%;
@@ -266,5 +268,40 @@ main {
                 }
             }
         }
+
+        &__credit-card-container {
+            display: flex;
+            flex-wrap: wrap;
+            padding-bottom: 5px;
+            border-bottom: 3px solid $border-color;
+            margin-bottom: 50px;
+    
+            &__name {
+                flex: 0 0 100%;
+                padding: 0;
+            }
+
+            &__date {
+                flex: 0 0 100%;
+                padding: 0;
+
+                &__field {
+                    flex: 0 0 50%;
+    
+                    &:nth-child(odd) {
+                        padding-right: 5px;
+                    }
+    
+                    &:nth-child(even) {
+                        padding-left: 5px;
+                    }
+                }
+            }
+        }
+
+        &__card-info {
+            flex-wrap: wrap;
+        }
     }
 }
+
