feat: filtering in main screen

--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.html
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.html
@@ -114,7 +114,7 @@
                 </div>
 
                 <section *ngIf="isCreditCard" class="form-body__credit-card-container">
-                    <!-- <div class="form-body__credit-card-container__name">
+                    <div class="form-body__credit-card-container__name">
                         <div class="form-body__field">
                             <label for="customerCardHolderName">Nome do cartão</label>
                             <input type="text" [(ngModel)]="cardHolderName" class="form-body__field--input"
@@ -150,7 +150,7 @@
                             </select>
                             <p *ngIf="validateYear()" class="form-body__field--error-message">O ano é obrigatório</p>
                         </div>
-                    </div> -->
+                    </div>
 
                     <section class="form-body__card-info">
                         <div class="form-body__location--container">
