--- a/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.html
+++ b/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.html
@@ -16,7 +16,7 @@
 
             <div class="search-customer-container">
                 <label for="customerName">Nome do cliente</label>
-                <input type="text" class="search-customer-container--input" placeholder="Digite seu nome">
+                <input type="text" [(ngModel)]="filteredCustomer" class="search-customer-container--input" placeholder="Digite seu nome">
             </div>
 
             <div class="table-container">
@@ -30,11 +30,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>João da Silva paulo pinto maritaca</td>
-                            <td>joao@example.com</td>
-                            <td>123.456.789-00</td>
-                            <td>2023-08-26</td>
+                        <tr *ngFor="let customer of customersToGridList | searchFilter: filteredCustomer">
+                            <td>{{ customer.name }}</td>
+                            <td>{{ customer.email }}</td>
+                            <td>{{ customer.cpf }}</td>
+                            <td>{{ customer.insertedAt }}</td>
                             <svg class="table-container__customer-table--btn-edit" xmlns="http://www.w3.org/2000/svg"
                                 width="33" height="33" viewBox="0 0 33 33" fill="none">
                                 <circle cx="16.5" cy="16.5" r="16.5" fill="#D9D9D9" />
@@ -49,12 +49,6 @@
                                     d="M8 11H24M20 11L19.7294 10.1881C19.4671 9.40125 19.3359 9.00784 19.0927 8.71698C18.8779 8.46013 18.6021 8.26132 18.2905 8.13878C17.9376 8 17.523 8 16.6936 8H15.3064C14.477 8 14.0624 8 13.7095 8.13878C13.3979 8.26132 13.1221 8.46013 12.9073 8.71698C12.6641 9.00784 12.5329 9.40125 12.2706 10.1881L12 11M22 11V21.2C22 22.8802 22 23.7202 21.673 24.362C21.3854 24.9265 20.9265 25.3854 20.362 25.673C19.7202 26 18.8802 26 17.2 26H14.8C13.1198 26 12.2798 26 11.638 25.673C11.0735 25.3854 10.6146 24.9265 10.327 24.362C10 23.7202 10 22.8802 10 21.2V11M18 15V22M14 15V22"
                                     stroke="#131A29" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
-                        </tr>
-                        <tr>
-                            <td>Maria Souza</td>
-                            <td>maria@example.com</td>
-                            <td>987.654.321-00</td>
-                            <td>2023-08-25</td>
                         </tr>
                         <tr class="input-row">
                             <td><input type="text" placeholder="Exemplo de nome"></td>
