feat: inserting customer

--- a/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.scss
@@ -171,6 +171,7 @@ main {
     background-color: $header-footer-color;
     display: flex;
     align-items: center;
+    margin-top: 10%;
 
     &--text {
         color: $title-page-background-color;
