--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.html
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.html
@@ -28,7 +28,7 @@
             <div class="form-body__field">
                 <label for="customerCpf">Cpf</label>
                 <input type="text" [(ngModel)]="cpf" (ngModelChange)="formatCpf()" class="form-body__field--input"
-                    placeholder="Digite CPF aqui" formControlName="cpf" [maxlength]="cpfMaxLength" required>
+                    placeholder="Digite CPF aqui" formControlName="cpf" maxlength=14 required>
                 <p *ngIf="validateField('cpf')" class="form-body__field--error-message">O CPF é obrigatório</p>
                 <p *ngIf="validateCpf()" class="form-body__field--error-message">CPF inválido</p>
             </div>
@@ -50,7 +50,7 @@
                         <select (change)="setState($event)" class="form-body__field--select"
                             [ngStyle]="{color: state ? '#000000' : '#A9A9A9'}" formControlName="state" required>
                             <option [value]="0">Selecione o Estado</option>
-                            <option *ngFor="let state of stateDictionary | keyvalue" [value]="state.key">{{ state.value
+                            <option *ngFor="let state of stateList" [value]="state.key">{{ state.value
                                 }}</option>
                         </select>
                         <p *ngIf="validateState()" class="form-body__field--error-message">O estado é
@@ -63,7 +63,7 @@
                         <label for="customerCep">CEP</label>
                         <input type="text" [(ngModel)]="cep" (ngModelChange)="formatCep()"
                             class="form-body__field--input" placeholder="00.000 - 000" formControlName="cep"
-                            [maxlength]="cepMaxLength" required>
+                            maxlength=12 required>
                         <p *ngIf="validateField('cep')" class="form-body__field--error-message">O CEP é
                             obrigatório</p>
                         <p *ngIf="validateCep()" class="form-body__field--error-message">CEP inválido</p>
@@ -76,7 +76,7 @@
                         <select (change)="setCity($event)" class="form-body__field--select"
                             [ngStyle]="{color: city ? '#000000' : '#A9A9A9'}" formControlName="city">
                             <option [value]="0">Selecione a Cidade</option>
-                            <option *ngFor="let city of cityDictionary | keyvalue" [value]="city.key">{{ city.value
+                            <option *ngFor="let city of cityList" [value]="city.key">{{ city.value
                                 }}</option>
                         </select>
                         <p *ngIf="validateCity()" class="form-body__field--error-message">A cidade é
@@ -133,7 +133,7 @@
                                 [ngStyle]="{color: cardExpirationMonth ? '#000000' : '#A9A9A9'}"
                                 formControlName="cardExpirationMonth">
                                 <option [value]="0">Mês</option>
-                                <option *ngFor="let month of monthDictionary | keyvalue" [value]="month.key">{{
+                                <option *ngFor="let month of monthList" [value]="month.key">{{
                                     month.value
                                     }}</option>
                             </select>
@@ -146,7 +146,7 @@
                                 [ngStyle]="{color: cardExpirationYear ? '#000000' : '#A9A9A9'}"
                                 formControlName="cardExpirationYear">
                                 <option [value]="0">Ano</option>
-                                <option *ngFor="let year of yearDictionary | keyvalue" [value]="year.key">{{ year.value
+                                <option *ngFor="let year of yearList" [value]="year.key">{{ year.value
                                     }}</option>
                             </select>
                             <p *ngIf="validateYear()" class="form-body__field--error-message">O ano é obrigatório</p>
