feat: updating user

--- a/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.html
+++ b/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.html
@@ -35,7 +35,7 @@
                             <td>{{ customer.email }}</td>
                             <td>{{ customer.cpf }}</td>
                             <td>{{ customer.insertedAt }}</td>
-                            <svg class="table-container__customer-table--btn-edit" xmlns="http://www.w3.org/2000/svg"
+                            <svg (click)="registerCustomer(customer)" class="table-container__customer-table--btn-edit" xmlns="http://www.w3.org/2000/svg"
                                 width="33" height="33" viewBox="0 0 33 33" fill="none">
                                 <circle cx="16.5" cy="16.5" r="16.5" fill="#D9D9D9" />
                                 <path
