--- a/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.html
+++ b/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.html
@@ -51,11 +51,11 @@
                             </svg>
                         </tr>
                         <tr class="input-row">
-                            <td><input type="text" placeholder="Exemplo de nome"></td>
-                            <td><input type="email" placeholder="exemplo@mail.com"></td>
-                            <td><input type="text" placeholder="000.000.000-00"></td>
-                            <td><input type="text" placeholder="00/00/0000" onfocus="this.type='date'"
-                                    onblur="this.type='text'"></td>
+                            <td><input type="text" [(ngModel)]="customerName" placeholder="Exemplo de nome"></td>
+                            <td><input type="email" [(ngModel)]="customerEmail" placeholder="exemplo@mail.com"></td>
+                            <td><input type="text"  [(ngModel)]="customerCpf" placeholder="000.000.000-00" (ngModelChange)="formatCpf()"
+                                maxlength=14></td>
+                            <td><input type="text" placeholder="00/00/0000" disabled></td>
                             <svg (click)="registerCustomer()" class="table-container__customer-table--btn-add" xmlns="http://www.w3.org/2000/svg"
                                 width="33" height="33" viewBox="0 0 33 33" fill="none">
                                 <circle cx="16.5" cy="16.5" r="16.5" fill="#D9D9D9" />
